Double scrollbar fix

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -1,21 +1,8 @@
 @import "./variables.scss";
 
-$color-text: #333;
-
-.banner {
-  color: $color-text;
-}
-
-#bootstrap-overrides page-header {
-    padding: 0px;
-    margin: 0px;
-    color: $color-text;
-    font-size: 20px !important;
-}
-
 .page-body-grey {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: $page-background;
 	overflow: auto;
 }
